<resources>
    <string name="app_name">Serene</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="improvement_in">Improvement (in %)</string>
...
    <string name="last_two_weeks">Last Two Weeks</string>
    <string name="last_month">Last Month</string>
    <string name="specific_period">Specific Period</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="not_at_all">Not at all</string>
    <string name="delete">delete</string>
    <string name="google_calendar_description">Serene wants to connect with your google calendar to get your events in order to perform correctly.</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="alert">Your email has not been verified.</string>
    <string name="empty">There are no upcoming appointments</string>
    <string name="tips">Quote of the day</string>
    <string name="minute">minute(s)</string>
...
        <item>@string/day</item>
        <item>@string/week</item>

    </string-array>

    <string-array name="yes_no">
        <item>@string/yes</item>
        <item>@string/no</item>

    </string-array>

    <string-array name="gender">
        <item>@string/male</item>
        <item>@string/female</item>
...
    <string name="EmptyFields">All Fields Required</string>

    <!-- Edit Text Draft Page -->
    <string name="EditTD">Edit Draft</string>
    <string name="SaveChangesTD">Save Changes</string>
    <string name="DeleteTD">Delete Draft</string>
    <string name="DeleteMessageTD">Are you sure you want to delete this Draft ? </string>
    <string name="DeleteOKTD">Delete</string>
    <string name="DeleteCancleTD">Cancel</string>
    <string name="TDDeletedSuccess">Text Draft Deleted Successfully</string>
    <string name="TDDeletedFialed">The Text Draft Did not Deleted, Try Again</string>
    <string name="TDUpdatedSuccess">Text Draft Updated Successfully</string>
    <string name="TDUpdatedFialed">The Text Draft Did not Updated, Try Again</string>

    <!-- Add Appointment Reminder Page -->
    <string name="AddApp">New Appointment</string>
    <string name="TitleApp">Title</string>
...
    <string name="AddDocFialed">The Doctor Did not Added, Try Again</string>
    <string name="SaveDoc">Add Doctor</string>

    <!-- Delete Med Reminder Page -->
    <string name="MyDoc">My Doctor</string>
    <string name="DeleteDoc">Delete Doctor</string>
    <string name="DeleteMessageDoc">
        After deleting this doctor s/he will no longer be linked with your account and the automatic periodic reports will be disabled.
    </string>
    <string name="DeleteOKDoc">Delete</string>
    <string name="DeleteCancleDoc">Cancel</string>
    <string name="DocDeletedSuccess">The Doctor Deleted Successfully</string>
    <string name="DocDeletedFialed">The Doctor Did not Deleted, Try Again</string>

    <!-- Edit Profile Page -->
    <string name="ChooseImage">Choose Image</string>
    <string name="OldPassET">Old Password</string>
    <string name="NewPassET">New Password</string>
...
    <string name="Text">Text Draft/s</string>
    <string name="Voice">Voice Draft/s</string>

    <!-- Voice Draft Dialog -->
    <string name="SpeedPalyAydio">X2</string>
    <string name="DeleteAudio">Delete</string>
    <string name="DeleteMessageAudio">Are you sure you want to delete this Voice Draft ? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="AudioDeletedSuccess">The Voice Draft Deleted Successfully</string>
    <string name="AudioDeletedFialed">The Voice Draft Did not Deleted, Try Again</string>
    <string name="medicines">Medicines</string>
    <string name="no_scheduled_medicines">No Scheduled Medicines</string>
    <string name="no_scheduled_appointments">No Scheduled Appointments</string>
    <string name="no_scheduled_appointments_or_medicines_for_today">No Scheduled Appointments or Medicines For Today</string>
    <string name="anxiety_analysis">Anxiety Analysis</string>
    <string name="anxiety_analysis_description">Learn more about your anxiety and health, just one click away!</string>
...
