<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/your_dialog_root_element"
    android:layout_width="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_height="200dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/white_background"
    >
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserrat"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="title"
...
